--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="google-site-verification" content="3l5AmPQxEdzEqNgbHybcC-XqkOTg7l4RkF71vP9zOJQ" />
   <link href="https://fonts.googleapis.com/css2?family=Sora:wght@100..800&display=swap" rel="stylesheet">
  <link
   href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght@24,700"
