--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   rel="stylesheet"
 />
 <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Sora:wght@100..800&display=swap" rel="stylesheet">
-<link rel="icon" type="image/png" sizes="32x32" href="./images/myfavicon.png" />
+<link rel="icon" type="image/png" sizes="32x32" href="/Shloka-Setu/images/myfavicon.png" />
 
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
